# AIWaiter

./: .env.template  .gitignore  Makefile  README.md  evaluate_plan.md  inprogress.md  instruction.md  main.py  memory_design.md  opencode.json  pyproject.toml  reponse.md  setup.sh  tasks.md  tasks_on_section.md  ui-instruction.md  voice_agent_instruction.md
ai_waiter_core/: README.md  main.py  setup.py
ai_waiter_core/ai_waiter_core/: server.py
ai_waiter_core/ai_waiter_core/agent/: actions.py  graph.py  state.py
ai_waiter_core/ai_waiter_core/config/: agent_config.py  base_settings.py  hardware_config.py
ai_waiter_core/ai_waiter_core/perception/: stt_phowhisper.py  vad_silero.py
ai_waiter_core/ai_waiter_core/schemas/: order.py  search.py
ai_waiter_core/ai_waiter_core/services/: orchestrator_client.py  restaurant_db.py
ai_waiter_core/ai_waiter_core/utils/: menu_utils.py
assets/data/: best_seller.json  customer_info.json  floorplan.sim.json  menu.json  restaurant_info.txt
docs/: INDEX.md  INSTALL.md  PROGRESS.md  SYSTEM_ARCHITECTURE.md  Setup_&_Eval Guide.md  agent-brain-analysis.md  ai-engineer-guide.md  architecture-overview.md  code-architecture.md  eval_run_jetson.md  evaluate_dataset_LLM.md  evaluation-llm.md  frontend-customer-ui-guide.md  frontend-customer-ui-run-vi.md  jetson-ctranslate2-build.md  jetson-orin-nano-llm-sizing-and-runtime.md  makefile-reference.md  progress.md  run-guide-vi.md  run-voice-vi.md  screen-bridge.md  setup-deploy.md  system-design.md  testing-tracker.md  vad-mic-testing-guide.md  voice-web-button-summary.md
docs/ai-engineering/: agent-bug-investigation-guide.md
docs/analysis/: 0004-router-multi-intent-and-progressive-response.md  0005-comprehensive-review-limitations-and-improvements.md
docs/architecture/: agent-brain-analysis.md  code-architecture.md  memory_design.md
docs/evaluation/: eval-baseline-2026-07.md  evaluation-llm.md
docs/evaluation/analysis/: 0006-restaurant-db-payment-system.md  analysis_03062026.md  analysis_2026-06-10.md  report_slides.md
docs/guides/: e2e-voice-web-runbook-vi.md  jetson-boot-runbook-vi.md  jetson-ctranslate2-build.md  jetson-nav-merge-vi.md  makefile-reference.md  real-robot-demo-runbook-vi.md  run-guide-vi.md  run-voice-vi.md  setup-deploy.md
docs/problem/: 0006-semantic-router-dataset-problems.md
docs/progress/: progress.md
docs/thesis/: chapter3_draft_36_39.md  chapter_03.md  diagram.md  outline.md  references.md  related_work.md  table_of_content.md  thesis-writing.md
docs/thesis/01-introduction/: chapter_01.md
docs/thesis/02-literature-review/: 02-01-overview-of-mobile-robots.md  02-01-overview.md  02-02-autonomous-mobile-robot.md  02-02-autonomous-robot-navigation.md  02-02-dynamic-goal-navigation.md  02-02-kinematic-model-of-the-two-wheel-differential-drive-robot.md  02-03-sensors-for-indoor-mobile-robots.md  02-03-vietnamese-speech-processing.md  02-03-vietnamese-voice-understanding.md  02-04-conversational-ai-agent.md  02-04-conversational-ai-agents.md  02-04-odometry-and-sensor-fusion.md  02-05-menu-knowledge-retrieval.md  02-05-ros2-and-the-autonomous-navigation-stack.md  02-06-large-language-models-and-conversational-ai.md  02-06-restaurant-operations.md  02-07-multi-role-web-interfaces.md  02-07-speech-processing-vad-stt-tts.md  02-07-web-interfaces.md  02-08-edge-computing-platform.md  02-09-summary.md  (+1 more)
evals/scripts/: analyze_failures.py  bench_api.py  bench_ws.py  build_review.py  eval_ambiguity.py  eval_delegate.py  eval_e2e.py  eval_latency.py  eval_name_resolution.py  eval_out_of_menu.py  eval_pizza.py  eval_retrieval.py  eval_retrieval_full.py  eval_router.py  eval_router_full.py  eval_semantic.py  eval_validator_ablation.py  run_real_life.py  test_confirm_flow.py  test_tool_call.py
frontends/customer_ui/: .env.example  README.md
robot_ws/: README.md  setup_env.sh
robot_ws/docs/: DEV_GUIDE.md
robot_ws/src/real/ai_hw_bridge/: package.xml  setup.cfg  setup.py
robot_ws/src/real/ai_hw_bridge/ai_hw_bridge/: hw_delivery.py  task_bridge.py
robot_ws/src/real/ai_hw_bridge/launch/: ai_waiter.launch.py
robot_ws/src/real/tarkbot_robot/: package.xml  setup.py
robot_ws/src/real/tarkbot_robot/config/: depthimage_to_laserscan.yaml  ekf.yaml  floorplan.json  nav2_params.yaml  robot.yaml  rtabmap_localization_params.yaml  slam_toolbox_params.yaml
robot_ws/src/real/tarkbot_robot/launch/: ekf_visualization.launch.py  sensors.launch.py
robot_ws/src/real/tarkbot_robot/launch/navigation/: deliver_test.launch.py  navigation.launch.py  pose_survey.launch.py  rtabmap_localization.launch.py
robot_ws/src/real/tarkbot_robot/launch/slam/: rtabmap_slam.launch.py  slam.launch.py
robot_ws/src/real/tarkbot_robot/maps/: restaurant.pgm  restaurant.yaml  rtab_map_0718.pgm  rtab_map_0718.yaml  rtab_map_0719.pgm  rtab_map_0719.yaml  rtab_map_090726.pgm  rtab_map_090726.yaml
robot_ws/src/real/tarkbot_robot/rviz/: nav2_navigation.rviz  pose_survey.rviz
robot_ws/src/real/tarkbot_robot/tarkbot_robot/: aruco_debug.py  deliver_test.py  monitor_ekf.py  pose_record.py  robot_node.py  serial_protocol.py  visual_delivery.py
robot_ws/src/real/tarkbot_robot/urdf/: robot.urdf
robot_ws/src/sim/ai_sim_bridge/: package.xml  setup.cfg  setup.py
robot_ws/src/sim/ai_sim_bridge/ai_sim_bridge/: pose_bridge.py  task_bridge.py
robot_ws/tests/: test_modular_retriever.py
scripts/: __init__.py  bench_embedding.sh  build_centroids.py  calibrate_temperature.py  mock_robot.py  probe_stt.py  probe_stt_live.py  probe_vad.py  setup.py  test_drift.py  test_piper_tts.py  text_chat_test.py  voice_chat_test.py
scripts/menu_images/: README.md  cleanup.py  recrop.py
src/_shared/: __init__.py  paths.py  types.py
src/agent_brain/: README.md  __init__.py  server.py
src/backend/: README.md
src/edge_voice/: README.md  __init__.py  log.py  main.py
src/server_orchestrator/: README.md  __init__.py  config.py  main.py
storage/db/: checkpoints.db-shm  checkpoints.db-wal
test/: test_order_workflow.py
tests/: conftest.py
tests/scripts/: run_conversation_demo.py  run_long_conversation.py
(+381 files in other folders)
