[project]
name = "ai-waiter"
version = "0.1.0"
# Locked to 3.10 to match ROS 2 Humble (python 3.10) — avoids version drift
# between the uv env and the ROS workspace.
requires-python = ">=3.10,<3.11"

# ── BASE = the small shared core every machine needs (config, schemas, settings).
# Role-specific stacks live in [project.optional-dependencies] below — each machine
# installs ONLY the role it plays (architecture pivot 2026-06: "brain" on the SERVER,
# "voice/body" on the JETSON robot). See docs/INSTALL.md.
#
#   Server (PC, x86):        uv sync --extra server --extra cu13   (--extra cu12 on old GPU)
#   Jetson robot:            uv sync --extra voice                 (+ hand-build ctranslate2)
#   Dev x86 testing voice:   uv sync --extra voice  --extra cu13
#   Dev x86 doing both:      uv sync --extra server --extra voice --extra cu13
dependencies = [
    "numpy>=2.0,<2.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "tqdm>=4.68.3",                       # progress bars in eval / calibration scripts
    # torch/torchvision/torchaudio phải khai báo trực tiếp thì source theo platform bên dưới
    # mới có hiệu lực (nếu để transitive qua sentence-transformers, uv bỏ qua index riêng).
    #
    # Một fleet gồm 3 lớp máy, KHÔNG dùng chung một version torch được vì:
    #  - Jetson (aarch64): 2.11.0 cu126 từ index jetson-ai-lab (JetPack 6.2).  -> nằm ở base, auto theo marker.
    #  - x86 Blackwell (sm_120), driver >=580: bắt buộc CUDA 13 -> torch >=2.12 (PyPI).  -> extra "cu13".
    #  - x86 GPU đời cũ + driver CUDA 12 (vd RTX 3050 + driver 535): torch cu121.        -> extra "cu12".
    #
    # Cả hai máy x86 đều là (x86_64, linux) nên marker không tách được -> tách bằng extra
    # tường minh: máy x86 PHẢI chạy `uv sync --extra cu12` hoặc `--extra cu13`.
    #
    # torch ở base (aarch64) vì CẢ HAI vai trò cần nó: voice (chỉ silero-VAD — faster-whisper
    # chạy trên ctranslate2, KHÔNG cần torch) và server (GPU embeddings của
    # sentence-transformers). Trên x86 torch tới từ extra cu12/cu13.
    "torch==2.11.0 ; platform_machine == 'aarch64'",
    "torchvision==0.26.0 ; platform_machine == 'aarch64'",
    # CỐ Ý KHÔNG khai báo torchaudio cho aarch64. Index Jetson chỉ có tới 2.10.0 (lệch ABI với
    # libtorch 2.11), còn wheel aarch64 trên PyPI build bằng CUDA 13 nên import chết ngay:
    #   OSError: libcudart.so.13: cannot open shared object file
    # Không file nguồn nào trong repo import torchaudio; thứ duy nhất chạm tới nó là câu
    # `import torchaudio` ở đầu utils_vad.py của silero-VAD (chỉ read_audio/save_audio dùng,
    # ta đưa raw PCM nên không gọi tới) -> vad_silero.py đã stub sẵn. Không package nào khác
    # require torchaudio, nên bỏ dòng này là nó biến mất hẳn khỏi Jetson.
    "piper-tts[voice]>=1.2",
]

[project.optional-dependencies]
# ── SERVER (PC, x86) — "NÃO": LLM agent + RAG menu + FastAPI backend ───────────────
# Tất cả phần đã tách KHỎI Jetson trong pivot 2026-06. Trên x86 ghép kèm cu12/cu13 để
# sentence-transformers dùng được GPU cho embedding.
server = [
    # agent (LangGraph) + LLM client (Ollama / llama.cpp OpenAI-compatible)
    "langchain-core>=1.4.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.16",
    "scikit-learn>=1.3,<1.9",            # semantic-centroid router (slm_router_node)
    # RAG menu + embeddings
    "langchain-community>=0.4.2",        # FAISS vectorstore wrapper
    "faiss-cpu>=1.14.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",      # embedding (retrieval + router), GPU-aware
    "underthesea>=9.5.0",                # Vietnamese word-seg (embedding preprocess)
    # backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pillow>=10.0",                      # convert the SLAM .pgm map to PNG for the panel minimap
]

# ── JETSON robot — "THÂN XÁC (audio)": VAD + STT + TTS, xử lý âm thanh CỤC BỘ ──────
# Hậu-pivot KHÔNG có LLM/RAG ở đây. Trên aarch64 faster-whisper/ctranslate2 build tay
# (xem docs/jetson-ctranslate2-build.md) nên faster-whisper chỉ khai báo cho x86; phần
# còn lại (edge-tts/sounddevice/soundfile/pyaudio/scipy) cài trên cả hai kiến trúc.
voice = [
    "faster-whisper>=1.2.1 ; platform_machine == 'x86_64'",  # STT (CTranslate2 backend)
    "pyaudio>=0.2.14",                   # mic capture (cần system portaudio)
    "scipy>=1.15",                       # polyphase mic resampling (native rate -> 16k) trong vad_silero
    "edge-tts>=7.0",                     # TTS (cloud fallback for Jetson/offline)
    "piper-tts>=1.2 ; platform_machine == 'x86_64'",  # TTS local (Piper, Vietnamese voice)
    "sounddevice>=0.5",                  # phát audio TTS (cần system portaudio)
    "soundfile>=0.12",                   # decode audio TTS (cần system libsndfile)
    # silero-VAD nạp lúc runtime qua torch.hub — torch tới từ base (aarch64) hoặc cu12/cu13 (x86).
]

# x86 Blackwell (CUDA 13, driver >=580). Lấy từ PyPI (default index).
cu13 = [
    "torch>=2.12 ; platform_machine == 'x86_64'",
    "torchvision>=0.27 ; platform_machine == 'x86_64'",
    "torchaudio>=2.11 ; platform_machine == 'x86_64'",
]
# x86 GPU đời cũ / driver CUDA 12 (vd RTX 3050 + driver 535). Wheel cu121 chạy được trên
# driver >=525 nhờ CUDA 12 minor-version forward-compat; kèm sẵn cublas/cudnn cu12 cho ctranslate2.
cu12 = [
    "torch==2.5.1 ; platform_machine == 'x86_64'",
    "torchvision==0.20.1 ; platform_machine == 'x86_64'",
    "torchaudio==2.5.1 ; platform_machine == 'x86_64'",
]

# Jetson (aarch64) lấy torch/torchvision GPU từ index NVIDIA jetson-ai-lab (CUDA 12.6),
# máy dev x86 vẫn lấy từ PyPI. Tránh việc `uv sync` đè bản GPU bằng wheel CPU/cu13 của PyPI.
[tool.uv]
# Ép uv resolve cho CẢ x86 lẫn aarch64 (Jetson), để source theo platform bên dưới có hiệu lực.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
# cu12 và cu13 loại trừ nhau (cùng là x86) -> uv resolve thành 2 nhánh riêng.
conflicts = [[{ extra = "cu12" }, { extra = "cu13" }]]

[tool.uv.sources]
# aarch64 -> index Jetson; extra cu12 -> index PyTorch cu121; cu13 dùng PyPI mặc định.
torch = [
    { index = "jetson-cu126", marker = "platform_machine == 'aarch64'" },
    { index = "pytorch-cu121", extra = "cu12" },
]
torchvision = [
    { index = "jetson-cu126", marker = "platform_machine == 'aarch64'" },
    { index = "pytorch-cu121", extra = "cu12" },
]
torchaudio = [
    { index = "pytorch-cu121", extra = "cu12" },
]

[[tool.uv.index]]
name = "jetson-cu126"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+simple/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# ── Ruff — fast Python linter + import sorter ──────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modern syntax)
    "B",      # flake8-bugbear (bug-prone patterns)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy — static type checker ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "langchain_ollama.*",
    "langgraph.*",
    "langgraph_prebuilt.*",
    "rank_bm25.*",
    "sentence_transformers.*",
    "faster_whisper.*",
    "pyaudio.*",
]
ignore_missing_imports = true
